<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.javier.szegedunifacard.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/bannerHeight"
                    android:layout_marginBottom="@dimen/activity_main_text_padding_bottom">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/logoBackground" />

                    <TextView
                        android:layout_width="@dimen/logowidth"
                        android:layout_height="match_parent"
                        android:background="@color/udacityLight" />

                    <TextView
                        android:layout_width="@dimen/logoContrastWidth"
                        android:layout_height="match_parent"
                        android:background="@color/udacityDark" />

                    <TextView
                        android:layout_width="@dimen/logowidth"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:background="@color/udacityLight" />

                    <TextView
                        android:layout_width="@dimen/logoContrastWidth"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:background="@color/udacityDark" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/logoHeight"
                        android:layout_centerInParent="true"
                        android:adjustViewBounds="true"
                        android:src="@drawable/uninewlogo" />
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/activity_main_text_padding_bottom"
                            android:layout_marginLeft="@dimen/activity_main_left_text_margin_left"
                            android:layout_marginRight="@dimen/activity_main_text_margin_right"
                            android:fontFamily="sans-serif"
                            android:text="@string/motivation" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/separatorSize"
                            android:layout_marginBottom="@dimen/activity_main_text_padding_bottom"
                            android:layout_marginLeft="@dimen/activity_main_left_text_margin_left"
                            android:layout_marginRight="@dimen/activity_main_text_margin_right"
                            android:background="@color/udacityDark" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="@dimen/iconSize"
                            android:layout_height="@dimen/iconSize"
                            android:layout_marginLeft="@dimen/activity_main_left_text_margin_left"
                            android:layout_marginTop="@dimen/activity_main_padding_top"
                            android:scaleType="fitCenter"
                            android:src="@drawable/smartphonehead" />


                        <TextView
                            android:layout_width="@dimen/listerwidth"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/activity_main_left_text_margin_left"
                            android:fontFamily="sans-serif"
                            android:paddingBottom="@dimen/activity_main_text_padding_bottom"
                            android:paddingTop="@dimen/activity_main_padding_top"
                            android:text="@string/name"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/activity_main_left_text_margin_left"
                            android:layout_marginRight="@dimen/activity_main_text_margin_right"
                            android:fontFamily="sans-serif"
                            android:paddingBottom="@dimen/activity_main_text_padding_bottom"
                            android:paddingTop="@dimen/activity_main_padding_top"
                            android:text="@string/namecontent"
                            android:textSize="@dimen/activity_list_text_size" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="@dimen/iconSize"
                            android:layout_height="@dimen/iconSize"
                            android:layout_marginLeft="@dimen/activity_main_left_text_margin_left"
                            android:layout_marginTop="@dimen/activity_main_padding_top"
                            android:scaleType="fitCenter"
                            android:src="@drawable/location" />


                        <TextView
                            android:layout_width="@dimen/listerwidth"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/activity_main_left_text_margin_left"
                            android:fontFamily="sans-serif"
                            android:paddingBottom="@dimen/activity_main_text_padding_bottom"
                            android:paddingTop="@dimen/activity_main_padding_top"
                            android:text="@string/address"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/activity_main_left_text_margin_left"
                            android:layout_marginRight="@dimen/activity_main_text_margin_right"
                            android:autoLink="map"
                            android:fontFamily="sans-serif"
                            android:paddingBottom="@dimen/activity_main_text_padding_bottom"
                            android:paddingTop="@dimen/activity_main_padding_top"
                            android:text="@string/addresscontent"
                            android:textSize="@dimen/activity_list_text_size" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="@dimen/iconSize"
                            android:layout_height="@dimen/iconSize"
                            android:layout_marginLeft="@dimen/activity_main_left_text_margin_left"
                            android:layout_marginTop="@dimen/activity_main_padding_top"
                            android:scaleType="fitCenter"
                            android:src="@drawable/worldwide" />


                        <TextView
                            android:layout_width="@dimen/listerwidth"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/activity_main_left_text_margin_left"
                            android:fontFamily="sans-serif"
                            android:paddingBottom="@dimen/activity_main_text_padding_bottom"
                            android:paddingTop="@dimen/activity_main_padding_top"
                            android:text="@string/web"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/activity_main_left_text_margin_left"
                            android:layout_marginRight="@dimen/activity_main_text_margin_right"
                            android:fontFamily="sans-serif"
                            android:paddingBottom="@dimen/activity_main_text_padding_bottom"
                            android:paddingTop="@dimen/activity_main_padding_top"
                            android:text="@string/websitecontent"
                            android:autoLink="web"
                            android:textSize="@dimen/activity_list_text_size" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="@dimen/iconSize"
                            android:layout_height="@dimen/iconSize"
                            android:layout_marginLeft="@dimen/activity_main_left_text_margin_left"
                            android:layout_marginTop="@dimen/activity_main_padding_top"
                            android:scaleType="fitCenter"
                            android:src="@drawable/smartphonehand" />


                        <TextView
                            android:layout_width="@dimen/listerwidth"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/activity_main_left_text_margin_left"
                            android:fontFamily="sans-serif"
                            android:paddingBottom="@dimen/activity_main_text_padding_bottom"
                            android:paddingTop="@dimen/activity_main_padding_top"
                            android:text="@string/phone"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/activity_main_left_text_margin_left"
                            android:layout_marginRight="@dimen/activity_main_text_margin_right"
                            android:fontFamily="sans-serif"
                            android:layout_marginBottom="@dimen/activity_main_text_padding_bottom"
                            android:paddingTop="@dimen/activity_main_padding_top"
                            android:text="@string/phonecontent"
                            android:textSize="@dimen/activity_list_text_size" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="@dimen/iconSize"
                            android:layout_height="@dimen/iconSize"
                            android:layout_marginLeft="@dimen/activity_main_left_text_margin_left"
                            android:layout_marginTop="@dimen/activity_main_padding_top"
                            android:scaleType="fitCenter"
                            android:src="@drawable/letter" />


                        <TextView
                            android:layout_width="@dimen/listerwidth"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/activity_main_left_text_margin_left"
                            android:fontFamily="sans-serif"
                            android:paddingBottom="@dimen/activity_main_text_padding_bottom"
                            android:paddingTop="@dimen/activity_main_padding_top"
                            android:text="@string/mail"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/activity_main_left_text_margin_left"
                            android:layout_marginRight="@dimen/activity_main_text_margin_right"
                            android:fontFamily="sans-serif"
                            android:layout_marginBottom="@dimen/activity_main_text_padding_bottom"
                            android:paddingTop="@dimen/activity_main_padding_top"
                            android:text="@string/mailcontent"
                            android:autoLink="email"
                            android:textSize="@dimen/activity_list_text_size" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/separatorSize"
                            android:layout_marginBottom="@dimen/activity_main_text_padding_bottom"
                            android:layout_marginLeft="@dimen/activity_main_left_text_margin_left"
                            android:layout_marginRight="@dimen/activity_main_text_margin_right"
                            android:background="@color/udacityDark"
                            tools:ignore="Suspicious0dp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/activity_main_text_padding_bottom"
                            android:layout_marginLeft="@dimen/activity_main_left_text_margin_left"
                            android:layout_marginRight="@dimen/activity_main_text_margin_right"
                            android:fontFamily="sans-serif"
                            android:text="@string/moreinfo" />
                    </LinearLayout>

                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/bottomBannerContrast"
                    android:background="@color/udacityLight" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/bottomBannerSize"
                    android:background="@color/udacityDark"
                    android:gravity="center"
                    android:text="@string/bottom_text"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/activity_list_text_size" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</layout>